# carbon-lens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  TODO.md  alembic.ini  clean_compute_history.json  clean_compute_report.json  docker-compose.yml  fly.toml  forecast_week.json  history.csv  history.json  openapi-generator.yaml  openapi.json  package-lock.json  pyproject.toml  railway.toml  render.yaml  snapshot.json
.github/workflows/: carbon-aware-example.yml  cd.yml  ci.yml  sla-monitor.yml  snapshot.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  (+8 more)
data/: region_grid_map.yaml
docs/: CASE_STUDY.md  DEPLOY.md  ROADMAP.md
grafana/: carbonlens-dashboard.json
k8s/: README.md  helmfile.yaml  secrets.yaml.example
loadtest/: locustfile.py
scripts/: build_clean_compute_report.py  build_snapshot.py  export_openapi.py
terraform/: data_source_greenest_region.tf
tests/: conftest.py  test_airflow_integration.py  test_anomaly.py  test_api.py  test_billing.py  test_cache.py  test_clean_compute_report.py  test_cli.py  test_compliance.py  test_dispatcher_example.py  test_emission_factors.py  test_energy.py  test_example_app.py  test_flow_tracing.py  test_grid_mapper.py  test_infra.py  test_k8s.py  test_marginal_source.py  test_middleware.py  test_orchestrator_integrations.py  test_orgs.py  test_parsers.py  test_providers.py  test_rate_limit.py  test_router.py  test_scheduler.py  test_scorer.py  test_sdk.py  test_signal_contract.py  test_sla.py  test_sla_repository.py  test_sla_seed.py  test_usage_ingestion.py  test_validation.py  test_zk.py  test_zk_executor.py
web/: .env.development  .env.production  .gitignore  .pnp.cjs  biome.json  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts  worker.js  wrangler.jsonc
(+219 files in other folders)
