[project]
name = "carbonlens"
version = "0.1.0"
description = "Carbon-intensity data API for cloud regions, with carbon-aware routing and GHG-Protocol compliance reporting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "slowapi>=0.1.9",
    "alembic>=1.18.4",
    "typer>=0.24.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-multipart>=0.0.27",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "aiosqlite>=0.20",
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pre-commit>=4.0",
]
# Live cloud-billing ingestion adapters (AWS Cost Explorer, GCP BigQuery billing
# export, Azure Cost Management). Optional — the core API and demo run without them.
# Install with: uv sync --extra cloud  (or pip install 'carbonlens[cloud]')
cloud = [
    "boto3>=1.34",
    "google-cloud-bigquery>=3.25",
    "azure-identity>=1.17",
    "azure-mgmt-costmanagement>=4.0",
]

[project.scripts]
serve = "carbon_mesh.main:run"
carbonlens = "carbon_mesh.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_mesh"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pyright]
include = ["src"]
# Optional framework integrations import third-party packages (e.g. Airflow) that
# aren't project dependencies; skip type-checking them so the gate stays clean.
exclude = ["src/carbon_mesh/integrations"]
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
